fixed featured cards to wide on small landscape format

--- a/research-hub-web/src/app/components/home/featured/featured.component.scss
+++ b/research-hub-web/src/app/components/home/featured/featured.component.scss
@@ -8,7 +8,6 @@
 .featured-container {
   z-index: 1;
   .featured-content {
-    width: 95vw;
     margin: 60px auto;
   }
   .featured-title {
